# gn

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: Background.h  Capture.h  Editor.h  Element.h  Gui.h  Input.h  MultiSelect.h  Settings.h  Text.h
src/: Background.cpp  Capture.cpp  Editor.cpp  Element.cpp  Gui.cpp  Input.cpp  MultiSelect.cpp  Settings.cpp  Text.cpp  main.cpp
